--- a/styles/style.css
+++ b/styles/style.css
@@ -6,3 +6,184 @@ Green: #00B172
 White: #FFF
 
 */
+@import url('https://fonts.googleapis.com/css2?family=Gabarito&family=Nunito&display=swap');
+
+html {
+  font-size: 16pxf;
+  font-family: 'Nunito', sans-serif;
+  text-align: center;
+}
+
+.section1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.botones-menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed top;
+  background-color: white;
+}
+
+.botones-menu button {
+  display: block;
+  justify-self: flex-end;
+  background-color: white;
+  border: 0;
+  margin: 0 10px 0 10px;
+  padding: 0;
+}
+
+.botones-menu img {
+  display: block;
+  justify-self: flex-start;
+  width: 200px;
+  height: auto;
+  padding: 5px 0 5px 0;
+}
+
+header {
+  display: flex;
+  flex-direction: column;
+  background-image: url(../images/landing.jpg);
+  width: 100%;
+  height: 550px;
+  background-size: cover;
+  align-items: center;
+  justify-content: center;
+}
+
+h1 {
+  color: white;
+  font-size: 2rem;
+}
+.parrafo-titulo {
+  color: white;
+  font-size: 0.7rem;
+  padding: 0;
+  margin: 0;
+}
+
+.section2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.titulo2 {
+  display: flex;
+  justify-content: center;
+  border-bottom: 5px solid #00B172;
+  margin-bottom: 50px;
+} 
+
+.ventajas {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: baseline;
+  margin: 0 0 75px 0;
+}
+
+.music-icon {
+display: flex;
+flex-direction: column;
+justify-content: space-evenly;
+align-items: center;
+}
+
+.high-quality-icon {
+display: flex;
+flex-direction: column;
+justify-content: space-evenly;
+align-items: center;
+margin: 0 50px 0 50px;
+}
+
+.devices-icon {
+display: flex;
+flex-direction: column;
+justify-content: space-evenly;
+align-items: center;
+}
+
+.icono {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 75px;
+  height: auto;
+}
+
+h3.parrafo-icono {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #00B172;
+}
+
+.section3 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #00B172;
+}
+
+.titulo3 {
+  display: flex;
+  flex-direction: column;
+}
+
+.funciones {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin-bottom: 50px;
+  text-align: start;
+} 
+
+.titulo3 h2 {
+  color: white;
+  text-decoration: underline;
+  margin: 20px 0 20px 20px;
+}
+
+.funciones h3 {
+  color: white;
+  margin: 0 0 0 20px;
+  padding: 0;
+}
+
+.funciones p {
+  color: white;
+  padding-top: 0;
+  margin: 20px 0 0 20px;
+}
+
+.spotify-app {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
+}
+
+.spotify-icon-white {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
+}
+.spotify-app img {
+  width: 200px;
+  height: auto;
+}
+
+.spotify-icon-white img {
+  width: 75px;
+  height: auto;
+}
